--- a/body.tex
+++ b/body.tex
@@ -22,23 +22,33 @@ Examples of scrum-like work include improving algorithms in response to user com
 
 In this document, we lay out the procedural details for how we define and carry out plans, following the framework described above, to deliver on our milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate.
 
-\section{Rubin Operations Leadership and Departments}
+\section{Rubin Operations Leadership and Annual Reporting}
 \label{sec:contacts}
 
-The Rubin Observatory Acting \ \gls{Director}  is Robert Blum and the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer and the Deputy Director for SLAC is Phil Marshall.
+The Rubin Observatory Acting \ \gls{Director}  is Robert Blum, the Interim Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO.
 
 The Program Coordinator is Cathy Petry.
 She monitors the budgets and maintains details within WeBud, the NOIRLab budgeting system. 
 She assists in developing the annual Program Operating Plan (POP), tracking milestones and reporting. 
-On the SLAC side, Christine Soldahl, Business Manager, handles similar tasks. 
+On the SLAC side, Christine Soldahl is the Business Manager who handles similar tasks. 
 
-The POP is a defined report and process for NOIRLab. Rubin Operations considers the POP to be a Rubin activity, which is informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget. For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year. For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin. The FWP is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal year. The FWP is previewed to SLAC management and DOE in February in advance of the final delivery in June. Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year. Detailed activity planning including lower level milestones continues though the year in advance of the next year. This detailed planning is the subject of this document.
+The POP is a defined report and process for NOIRLab. 
+Rubin Operations considers the POP to be a Rubin activity, which informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget. 
+For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year. 
+For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin. 
 
-Rubin Operations has four operational Departments and the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach). Each operational Department is lead by an Associate Director.
+The FWP is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal years. 
+The FWP is previewed to SLAC management and DOE in February in advance of the final delivery in June. 
+Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year. 
+Detailed activity planning, including lower level milestones, continues though the year in advance of the next year. 
+This detailed planning is the subject of this document.
 
 \section{Formal Organizational Structure}
 \label{sec:structure}
+
+Rubin Operations has four operational Departments in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach). 
+Each operational Department is lead by an Associate Director.
 
 \subsection{Work Breakdown Structure}
 \label{sec:wbs}
@@ -66,44 +76,36 @@ Thus:
 \hline
 \end{longtable}
 
-%These subdivisions are referred to as the \emph{third level \gls{WBS}}.
-%Often, they are quoted without the leading ``1'' (e.g. ``02C.01''), but, even in this form, they are referred to as ``third level''.
-
-%All of these third level \gls{WBS} \glspl{element} are subdivided, forming a fourth level.
-%The fourth level always contains a ``00'' \gls{element}, which is used to capture management and \gls{LOE} work, and may contain other fourth level, or even deeper, structure.
-%Nodes in the \gls{WBS} tree are referred to as \glspl{element}.
-
 %\subsection{The Control Account Manager}
 %\label{sec:cam}
 
 Detailed work is planned in advance of each financial year at the team level. 
-Team leads will work with department heads to develop plans for activities that address specific milestones, projects, and level of effort activity. 
+Team leads will work with department associate directors to develop plans for activities that address specific milestones, projects, and level of effort activity. 
 Highest level milestones are reported regularly throughout the fiscal year to SLAC, AURA, NSF and DOE. 
 
 
 \subsection{Level of Effort Work}
 \label{sec:loe}
 
-There is work throughout Rubin Operations that will be recorded as a \gls{LOE}. These activities include attending meetings, reporting on milestones or taking part in other activities which do not directly map to deployed code.
-This may be particularly the case for technical managers or others in leadership roles within the project.
-With \gls{LOE} work is assumed to earn value (informally) simply through the passage of time.
+There is work throughout Rubin Operations that will be recorded as a \gls{LOE}. 
+These activities include attending meetings, reporting on milestones, or taking part in other activities which do not directly map to deployed code.
+This may be particularly the case for technical managers or others in leadership roles.
+\gls{LOE} work is assumed to earn value (informally) simply through the passage of time.
 
-In general, we strive to minimize the fraction of our effort which is devoted to \gls{LOE} activities and favor those which are more directly accountable.
+In general, we strive to minimize the fraction of effort which is devoted to \gls{LOE} activities and favor those which are more directly accountable.
 However, in certain cases such as operations and maintenance of telescope and facility systems, pipelines or other systems, \gls{LOE} is perfectly acceptable.
 
-As an example, our first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables. 
+As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is tracked against concrete deliverables. 
 Technical staff in Chile at the summit facility may spend a much more significant fraction of time as  \gls{LOE}.
 However, as above, we generally aspire to minimize the fraction of \gls{LOE} for development activity.
 
-
-%Note that all \gls{LOE} work should be invoiced to the ``00'' fourth-level \gls{WBS} \gls{element} (1.02C.03.00, 1.02C.04.00, etc)
 
 \section{Estimating Effort}
 \label{sec:effort}
 
 \subsection{Basic Assumptions}
-The Construction Project assumes that a full-time individual works for a total of 1,800 hours per year: this figure is \emph{after} all vacations, sick leave, etc are taken into account.
-The Rubin operations partners, SLAC and NOIRLab, may have different definitions for tracking their staff time; Rubin operations uses 1800 hours per year as a fiducial value for effort estimation purposes.
+Rubin Operations assumes that a full-time individual works for a total of 1,800 hours per year: this figure is \emph{after} all vacations, sick leave, etc are taken into account.
+The Rubin operations partners, SLAC and NOIRLab, may have different definitions for tracking their staff time; Rubin operations uses 1,800 hours per year as a fiducial value for effort estimation purposes.
 
 % PJM: generalize to ops staff
 % Staff appointed to ``developer''
@@ -116,17 +118,17 @@ year to operations activity, and the remainder of their time to personal researc
 
 Personal research time is charged to Rubin along with the operations role time, the logic being that 
 scientists in operations roles must be engaged in research as well in order to succeed in their operations role.
-Rubin expects to pay the full
-rate for an individual with research time who contributes 1,440 hours to
-operations. This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC. 
-Science time is included in the sub contracts of our partners at affiliated institutions through indirect charges 
+Rubin expects to pay the full rate for an individual with research time who contributes 1,440 hours to
+operations. 
+This is handled through indirect rates at both NOIRLab and direct charges to research accounts at SLAC. 
+Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges 
 similar to the case for NOIRLab.
 
 %When reporting actual costs (\S\ref{sec:actuals}), it may
 %be helpful to consider the following examples:
 
-In Data Production, our base assumption is that 30\% of an individual's \RO operations time (i.e. 540 hours/year for a full-time developer, 432 hours/year for a full-time scientist) are devoted to overhead for regular meetings\footnote{``Meetings'' include, for example, scheduled weekly team meetings, stand-ups, etc; major conferences or project meetings involving preparation, travel time, etc should be scheduled in advance and allocated \glspl{SP}.}, ad-hoc discussions and other interruptions.
-This work is counted as \gls{LOE} (and, as such, is charged to the relevant ``00'' fourth level \gls{WBS} \gls{element}, as described in \S\ref{sec:loe}).
+In Data Production, the base assumption is that 30\% of an individual's \RO operations time (i.e. 540 hours/year for a full-time developer, 432 hours/year for a full-time scientist) are devoted to overhead for regular meetings\footnote{``Meetings'' include, for example, scheduled weekly team meetings, stand-ups, etc; major conferences or project meetings involving preparation, travel time, etc should be scheduled in advance and allocated \glspl{SP}.}, ad-hoc discussions and other interruptions.
+This work is counted as \gls{LOE}.
 It is actively encouraged to allocate less than 30\% of an individuals time to \gls{LOE} where that is possible.
 
 Assuming no variation throughout the year, we therefore expect 105 hours of productive work from a developer, or 84 hours from a scientist, per month.
@@ -160,7 +162,6 @@ In this case, the ratio of hours to \glspl{SP} increases, but the number of hour
 
 Note that specific activities related on ``onboarding'' and getting up to speed with operations can be ticketed as regular work.
 For example, working through tutorials, reading documentation, and so on are all activities which can earn \glspl{SP}.
-%Typically, this will assigned to the ``00'' (management) \gls{element} of the \gls{WBS} (\S\ref{sec:wbs}).
 
 \subsubsection{Technical Managers and other Leadership Roles}
 
@@ -180,29 +181,28 @@ The plan for pre-operations and Survey Operations is embodied in:
     \item
         A set of \emph{Milestones}, each of which represents the delivery or availability of specific functionality. Each planning package culminates in a milestone, and may contain other milestones describing intermediate results.
     \item
-        A series of \emph{epics}, which describe major pieces of technical work. Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, and durations.
+        A series of \emph{epics} describe major pieces of work. Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, and durations.
 \end{enumerate}
 
-Milestones are allocated to one of four levels, defined as follows:% PJM: Can we not design a scheme where we use the term "level" to label both the WBS activities AND the milestones? We seem so close! As it is, though, I think we have to write the following text:
-\footnote{Note that the level of the milestone is logically distinct from the level of the WBS and OBS, even though the same term (``level'') is used to label both. In the OBS, level 0 is the Observatory, level 1 is the departments, level 2 is the teams, and level 3 is the groups within the teams. We take care to always disambiguate ``WBS level'' from ``milestone level'' and never use the term ``level'' without these qualifiers preceding it.}
+Milestones are allocated to one of four levels, defined as follows:
 
 \begin{description}
-%this is not consistent with NOIRLab or our current FY21 plan. We need to discuss an decide how to capture these. Could be one or two RDO level MS and several L2 MS for each department both of which show up in the POP. Or we keep the Major MS classification and have several of those in each Dep. Suppose we had one or two L1 milestones like Annual DR. Then all the current Major MS in our sheet could be L2s that point at that.
 \item[Level 1]
-These are at the full observatory level owned by the directors office
+These are at the full observatory level and owned by the Directors Office. 
+An example is the completion of an annual Data Release.
 \item[Level 2]
-These reflect cross department commitments. As such, they must be defined
-in consultation with the Director's Office
+These reflect effort within a Department and are owned by an Associate Director, or are cross-Department commitments. 
+As such, they must be defined in consultation with the Director's Office.
 \item[Level 3]
-These are internal to a particular Department and assigned to a team  and can therefore be specified by a single team lead.
+These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these milestones are exposed to external reviewers: it is vital that these be delivered on time and to specification.
+Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is vital that these be delivered on time and to specification.
 Low-level (3 and beyond) milestones are defined for use within Departments, but even here properly adhering to the plan is vital: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should help achieve milestones i.e. they may be blocking issues on the milestones.
-A detailed description of work for a given \gls{epic} is known, it can and should be described in \gls{JIRA}.
-This should be assigned to the appropriate \glspl{cycle}.
+When a detailed description of work for a given \gls{epic} is known, it is described in \gls{JIRA}.
+It should then be assigned to the appropriate \glspl{cycle}.
 
 % PJM: need text describing clearly how sequeneces of epics build up to a milestone - and how the epics will be tracked such that progress towards the milestones is evident.
 
@@ -270,9 +270,11 @@ Each \gls{epic} loaded into the plan must have:
   The \texttt{wbs} field set to the appropriate \gls{WBS} \emph{leaf} \gls{element}.
 \item
   The \texttt{Story Points} field set to a (non-zero!) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
+  \item
+  Tagged with the appropriate L3 or L2 milestone that the epic will contribute to schieving (or achieve in its totality).
 \end{itemize}
 
-Be aware that:
+Be aware that: (Amanda: I don't think all of the following bullets are true or necessary in the Operations non-EVMS era.  Should clarify with Cathy and Wil.) 
 
 \begin{itemize}
 \item
@@ -349,7 +351,7 @@ Obviously, this will impact the labor available for other activities in the next
 \section{Execution}
 \label{sec:execution}
 
-Having defined defined the plan for a \gls{cycle} following \S\ref{sec:cycle-plan}, we execute it by means of a series of month-long sprints.
+Having defined the plan for a \gls{cycle} following \S\ref{sec:cycle-plan}, we (RDP and RPF) execute it by means of a series of month-long sprints.
 In this section, we detail the procedures teams are expected to follow during the \gls{cycle}.
 
 \subsection{Defining Stories}
@@ -523,11 +525,24 @@ Where tickets describe bugs or other urgent emergent work which cannot be deferr
 \subsection{Coordination Standup}
 \label{sec:sup}
 
-\section{Standard Reporting Cycle}
+\section{Tracking Progress and Standard Reporting Cycle}
 \label{sec:reporting-cycle}
  Cathy ?
  
- High level milestone progress will be reported to SLAC and NOIRLab regularly. NOIRLab reports will flow quarterly to the NSF as ell showinf progress on all L1 and L2 milestones called out in the POP. 
+\subsection{Tracking Progress toward Milestones}
+
+Progress on completing epics is visualized in Smartsheet.  
+Smartsheet lists all Level 1 through Level 3 milestones in a gantt-chart style view.  
+Each Level 1 milestone is achieved by completing a series of Level 2 and/or Level 3 milestones.  
+Smartsheet tracks Story Points marked as complete in individual \gls{JIRA} epics in real time. 
+Progress on individual milestones is shown as the weighted total of Story Points within each epic contributing to the successful completion of the milestone. 
+ 
+\subsection{Reporting Cycle}
+ 
+High level milestone progress will be reported to SLAC and NOIRLab regularly. 
+NOIRLab reports will flow quarterly (or monthly) to the NSF. 
+Rubin will show progress on all L1 milestones and any L2 milestones called out in the POP. 
+
 
 \section{Personnel}
 
