--- a/body.tex
+++ b/body.tex
@@ -179,9 +179,13 @@ The plan for pre-operations and Survey Operations is embodied in:
 % PJM: milestones come first, logically:
 \begin{enumerate}
     \item
-        A set of \emph{Milestones}, each of which represents the delivery or availability of specific functionality. Each planning package culminates in a milestone, and may contain other milestones describing intermediate results.
+        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. Milestones are officially defined in a \gls{Jira} milestone issue and are under change control.
+        % Each planning package culminates in a milestone, and may contain other milestones describing intermediate results. 
+        %(Amanda: A "Planning Package" was language used in the EVMS system of Construction and may not be relevant here)
     \item
-        A series of \emph{epics} describe major pieces of work. Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, and durations.
+        A series of \emph{epics} describe major pieces of work. 
+        Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, durations, end dates. 
+        All epics a linked to the milestone they are created to help deliver.  
 \end{enumerate}
 
 Milestones are allocated to one of four levels, defined as follows:
@@ -189,10 +193,14 @@ Milestones are allocated to one of four levels, defined as follows:
 \begin{description}
 \item[Level 1]
 These are at the full observatory level and owned by the Directors Office. 
-An example is the completion of an annual Data Release.
+Examples are the completion of a Data Preview, the beginning of nightly observations for the full survey, or the delivery of an annual Data Release. 
+Level 1 milestones are achieved by the culmination effort defined by a set of Level 2 and Level 3 milestones. 
+Level 1 milestones are reported to the agencies.
 \item[Level 2]
 These reflect effort within a Department and are owned by an Associate Director, or are cross-Department commitments. 
 As such, they must be defined in consultation with the Director's Office.
+Level 2 milestones are achieved by the culmination effort defined by a set of Level 3 milestones.
+Some Level 2 milestones may be reported to the agnecies as defined by the annual POP. 
 \item[Level 3]
 These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
