--- a/body.tex
+++ b/body.tex
@@ -178,7 +178,7 @@ The plan for pre-operations and Survey Operations is embodied in:
 
 \begin{enumerate}
     \item
-        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. Milestones are officially defined in a \gls{Jira} milestone issue and are under change control.
+        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. Milestones are officially defined in a \gls{JIRA} milestone issue and are under change control.
     \item
         A series of \emph{epics} describe major pieces of work. 
         Epics are associated with concrete, albeit high-level, deliverables in the \gls{shape} of the above milestones, and have specific resource loads (staff assignments), start dates, durations, end dates. 
