--- a/body.tex
+++ b/body.tex
@@ -175,11 +175,14 @@ The plan for pre-operations and Survey Operations is embodied in:
 
 \begin{enumerate}
     \item
-        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. Milestones are officially defined in a \gls{JIRA} milestone issue and are under change control.
+        A set of \emph{Milestones}, each of which represents the delivery of a major aspect of Rubin Operations or the availability of specific functionality. 
+        Milestones are officially defined in a \gls{JIRA} milestone issue.
     \item
         A series of \emph{epics} describe major pieces of work. 
-        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments and story points), start dates, and end dates. 
-        All epics are linked to the milestone they are created to help deliver.  
+        Epics are associated with concrete, albeit high-level, deliverables or outcomes that culminate in the achievement of the above milestones, and have specific resource loads (staff assignments story point values) end dates. 
+        All epics are linked to the milestone they are created to help deliver, although some epics might exist without linking to a milestone (level of effort epics, for example).  
+    \item
+        A visualization of progress on work done towards achieving milestones is captured in Smartsheet, which directly tracks progress by rolling up issues that are completed inside of \gls{JIRA} epics that work together to deliver a given milestone.      
 \end{enumerate}
 
 Milestones are allocated to one of three levels, defined as follows:
@@ -199,16 +202,16 @@ Some Level 2 milestones may be reported to the agencies as defined by the annual
 These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is vital that these be delivered on time and to specification.
-Low-level (3 and beyond) milestones are defined for use within Departments, but even here properly adhering to the plan is vital: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
+Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is vital that these be delivered on time and to specification. 
+Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue.  
+Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is vital: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should work to achieve milestones i.e. they may be blocking issues on the milestones.
 When a detailed description of work for a given \gls{epic} is known, it is described in \gls{JIRA}.
 It should then be assigned to the appropriate \glspl{cycle}.
 
-% PJM: need text describing clearly how sequeneces of epics build up to a milestone - and how the epics will be tracked such that progress towards the milestones is evident.
-Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points in \gls{JIRA} epics and rolling up the total progress.  
-To ensure success, \gls{JIRA} epics must be completely detailed out prior to a 6-month cycle ans total effort should be estimated out for an entire fiscal year of effort, as detailed below.  
+Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points in \gls{JIRA} epics and rolling up the total progress. 
+To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.  
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
@@ -232,7 +235,7 @@ carefully controlled.
 \label{sec:cycle-plan}
 
 Short term planning is carried out in blocks referred to as \glspl{cycle}, which (usually) last for six months.
-Before the start of a \gls{cycle}, milestones should be confirmed by the Director's Office.
+Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue.
 
 \subsection{Defining The Plan}
 
@@ -263,22 +266,23 @@ It is better to under-commit and over-deliver than vice-versa, but, ideally, aim
 \label{sec:planning-epics}
 
 The plan for a six month \gls{cycle} fundamentally consists of a set of resource loaded \glspl{epic} defined in \gls{JIRA}.
-Each \gls{epic} loaded into the plan must have:
+Each \gls{epic} loaded into the plan must have this minimum set of fields filled in:
 
 \begin{itemize}
 \item
   A concrete, well defined deliverable \emph{or} be clearly described as a ``bucket'' (\S\ref{sec:bucket});
 \item
-  The \texttt{cycle} field set to the appropriate \gls{cycle};
+  The \texttt{Component} field set to the appropriate Department;
 \item
   The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the Milestone it is labeled to achieve.
-%\item
-%  The \texttt{wbs} field set to the appropriate \gls{WBS} \emph{leaf} \gls{element}.
 \item
   The \texttt{Story Points} field set to a (non-zero!) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
 \item
-  Labeled with the appropriate L3 or L2 milestone that the epic will contribute to chieving (or achieve in its totality).
+  The \texttt{RO Milestone ID} field set to the appropriate L3 or L2 milestone that the epic will contribute to achieving (or achieve in its totality).
+  The exact \texttt{RO Milestone ID}text can be found in the Milestone issue or Smartsheet.
 \end{itemize}
+
+The fields above are required to have values entered because they define the connection to Smartsheet where effort-tracking for the full project is done. Other fields in the epic can also be filled in as needed. 
 
 Be aware that: (Amanda: I don't think all of the following bullets are true or necessary in the Operations non-EVMS era.  Should clarify with Cathy and Wil.) 
 
