--- a/body.tex
+++ b/body.tex
@@ -202,9 +202,9 @@ Some Level 2 milestones may be reported to the agencies as defined by the annual
 These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is vital that these be delivered on time and to specification. 
+Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification. 
 Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue.  
-Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is vital: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
+Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
 Epics should work to achieve milestones i.e. they may be blocking issues on the milestones.
 When a detailed description of work for a given \gls{epic} is known, it is described in \gls{JIRA}.
@@ -235,7 +235,7 @@ carefully controlled.
 \label{sec:cycle-plan}
 
 Short term planning is carried out in blocks referred to as \glspl{cycle}, which (usually) last for six months.
-Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue.
+Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue. Any team member can find the milestones in Jira.
 
 \subsection{Defining The Plan}
 
@@ -290,12 +290,6 @@ Be aware that: (Amanda: I don't think all of the following bullets are true or n
 \item
   An \gls{epic} may only be assigned to a single \gls{cycle}.
   It is not possible to define an \gls{epic} that crosses the \gls{cycle} boundary (see \S\ref{sec:cycle-close} for the procedure when an \gls{epic} is not complete by the end of the \gls{cycle}).
-\item
-  An \gls{epic} may only be assigned to a single \gls{WBS} leaf \gls{element}.
-  It is not possible to define \glspl{epic} that cover multiple \gls{WBS} \glspl{element}.
-  See \S\ref{sec:cross-team} for information on scheduling work which requires resources from multiple \glspl{element}.
-\item
-  An \gls{epic} must descend from a single planning package (see \S\ref{sec:long-term-plan}).
 \item
   Indeed, where possible management activities \emph{should} be scheduled as \glspl{epic} with concrete deliverables in this \gls{element} rather than being handled as \gls{LOE}.
 \item
